css/style.css
:root {
  --title-font: "Amatic SC", cursive;
  --text-font: "Raleway", sans-serif;
  --dark-grey: rgb(76, 83, 103);
  --mid-grey: rgb(138, 146, 168);
  --light-grey: rgb(211, 214, 222);
  --orange-yellow: rgb(255, 196, 0);
  --bg-dark-grey: rgba(76, 83, 103, 0.90);
  --bg-mid-grey: rgba(138, 146, 168, 0.90);
  --bg-light-grey: rgb(211, 214, 222, 0.9);
  --bg-orange-yellow: rgb(255, 196, 0, 0.9);
  --main-background: "../images/background.jpeg";
}
html {
  background-color: var(--dark-grey);
}
body {
  display: block;
  margin: auto;
  font-size: medium;
  background-image: linear-gradient(
      155deg,
      rgba(252, 189, 0, 0.1),
      rgba(252, 189, 0, 0.1)
    ),
    url('../images/background.jpeg');
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  background-position: 0 45px;
  position: relative;
  max-width: 1400px;
  background-color: var(--bg-light-grey);
}

h2,
p {
  font-family: var(--text-font);
}
a,
a:active,
a:visited,
.availability-button:active,
.availability-button:visited {
  max-width: max-content;
  text-decoration: none;
  color: var(--dark-grey);
}

a:hover,
a:focus,
.availability-button:hover,
.availability-button:focus {
  font-weight: bold;
  color: var(--dark-grey);
}

#navbar,
#footer {
  width: 100%; 

  background-color: var(--orange-yellow);
  box-shadow: 0px 0px 5px var(--mid-grey);
  font-family: var(--title-font);
  color: var(--mid-grey);
}
#navbar {
  position: fixed;
  z-index: 999;
  padding: 10px;
  margin: 0px;
  max-width: 1380px;
}
#footer {
  width: 100%; 
}
.navlink-container {
  float: right;
  max-width: 1000px;
  padding-right: 1em;
}
.navlink {

  margin: 10px;
  font-size: 22px;
}

#welcome,
#contact-target {
  position: relative;
  width: 100%;
  min-height: 50vh;
  top: 0;
  left: 0;
  padding: 4em 0px;
  margin: 0;
  background-image: linear-gradient(
      155deg,
      rgba(252, 189, 0, 0.1),
      rgba(252, 189, 0, 0.1)
    ),
    url('../images/background.jpeg');
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  background-position: 0 45px;
  position: relative;
  font-family: var(--title-font);
  color: white;
  font-size: 24px;
  
}
#contact-target {

  /* min-height: 90vh; */
  font-family: var(--title-font);
  padding-top: 25vh;
}

#welcome-text {
  text-shadow: -0.5px -0.5px var(--mid-grey),-0.5px 0.5px var(--mid-grey),0.5px -0.5px var(--mid-grey),0.5px 0.5px var(--mid-grey);
  max-width: 900px;
  display: block;
  margin: auto;
  padding: 3em;
  padding-bottom: 0;
}

#welcome-text h4 {
  display: block;
  margin: auto;
  text-align: right;
  max-width: max-content;
}
#welcome-text h1 {
  text-align: center;
  margin-bottom: 0px;
}

.lg-container {
  background-color: var(--light-grey);
  width: 100%;
  padding: 2em 0;
}
#info,
#reviews {
  display: block;
  margin: auto;
  max-width: 860px;
  color: var(--dark-grey);
  padding: 0 20px;
}
#info {
  max-width: max-content;
}
#reviews hr {
  color: var(--orange-yellow);
  border-color: var(--orange-yellow);
}

#med-about-image,
.sml-about-image {
  border: 2px solid var(--orange-yellow);
}
.sml-about-image {
  display: block;
  margin: 2em auto;
}
#med-about-image {
  display: none;
  margin: 3em 0;
}
#about-text-pt1 {
  max-width: 800px;
  text-align: justify;
  margin-bottom: 3em;
}
#about-text-pt2 {
  display: block;
  margin: 3em auto auto auto;
  max-width: 800px;
  text-align: justify;
}


.svg-icon {
  width: 40px;
  height: 40px;
  background-color: var(--mid-grey);
  padding: 4px;
  border-radius: 5px;
}
.feature-container {
  display:block;
  margin: auto;
  max-width: max-content;
  margin-bottom: 3em;
}
.feature {
  display: flex;
  align-items: center;
  margin-top: 1em;
}

.feature p {
  margin: 0 1em;
}

#gallery {
  text-align: center;
  background-color: var(--mid-grey);
  padding: 4em 0px;
  font-size: 24px;
  font-family: var(--text-font);
}
.gallery-container {
  max-height: 500px;
  overflow: scroll;
  display: block;
  margin: auto;
  max-width: 1000px;

}
#gallery img {
  width: 200px;
  height: 200px;
  margin: 10px 10px;
  border: 2px solid var(--light-grey);
}
#gallery img:hover {
  transition: 0.2s;
  transform: scale(1.05);
}

#contact {
  display: block;
  margin: auto;
  max-width: 900px;
}
#contact-text {
  display: block;
  max-width: 360px;
}
.yellow-box {
  margin: auto;

  background-color: var(--orange-yellow);
  opacity: 95%;
  color: var(--dark-grey);
  font-size: 16px;
  padding: 30px;
  border-radius: 2px;
}
.yellow-box p {
  margin: 0px;
}

#contact-target a {
  text-decoration: underline;
}


.byline {
  text-align: right;
  padding: 10px;
  margin: 0px;
  font-family: var(--title-font);
}
.elfsight-app-4a7379c7-484f-4e30-ba38-d261baf8e9c7 {
  font-family: var(--text-font);
  margin-top: 2em;
}

.widget {
  display: block;
  margin: 0 auto;
  font-family: var(--title-font);
  text-align: center;
}

.widget_input {
  padding: 5px;
  border-radius: 2px;
  border: none;
  margin: 4px;
  max-width: 300px;
  font-family: var(--text-font);
}

.availability-button {
  text-align: center;
  margin: 2em auto;
  padding: 20px;
  width: 168px;
  background: var(--orange-yellow);
  color: var(--dark-grey);
  border: 2px solid white;
  font-family: var(--title-font);
  font-size: 24px;
}
@media screen and (min-width: 768px) {
  #about {
    max-width: 900px;
    display: flex;
    align-items: center;
    justify-content: space-around;
  }
  #about-text-pt1 {
    max-width: 340px;
    text-align: justify;
  }
  #med-about-image {
    display: block;
  }
  .sml-about-image {
    display: none;
  }
  .availability-button {
    margin: 3em auto;
  }
  .lg-container {
    padding: 2.5em 0;
  }
}
@media screen and (min-width: 900px) {
  #info .feature-container {
    max-width: 900px;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;

  }
  #info .feature {
    width: 301px;

  }
  .availability-button {
    margin: 4em auto;
  }
  .lg-container {
    padding: 3em 0;
  }
}

